...
          <>
            <View style={styles.inputRow}>
              <TouchableOpacity style={styles.emojiBtn}>
                <Ionicons name="happy-outline" size={24} color={Colors.textSecondary} />
              </TouchableOpacity>
              <TextInput
                testID="message-input"
                style={styles.textInput}
                placeholder="Message"
                placeholderTextColor="#8696A0"
                value={newMessage}
                onFocus={clearMessageHighlight}
                onChangeText={(text) => {
...
                >
                  <Ionicons name="camera" size={22} color={Colors.textSecondary} />
                </TouchableOpacity>
              )}
            </View>
            {newMessage.trim() ? (
              <TouchableOpacity testID="send-button" style={styles.sendBtn} onPress={sendMessage}>
                <Ionicons name="send" size={20} color="#FFF" />
              </TouchableOpacity>
            ) : (
              <TouchableOpacity
                style={styles.micBtn}
                onPress={startRecording}
...
